# staticlib-fucker

./: .gitignore  Cargo.toml  README.md
src/: main.rs
